src/objects/XMLFormCustomSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <label>DefaultValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldGroup__c</fullName>
        <label>FieldGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <label>FieldLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldValue__c</fullName>
        <label>FieldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ParentTagName__c</fullName>
        <label>ParentTagName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TagName__c</fullName>
        <label>TagName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>XMLFormCustomSettings</label>
</CustomObject>